etl-api/src/db/snapshots/api__db__sources__tests__source_config_json_encryption-2.snap
---
source: api/src/db/sources.rs
expression: deserialized_config
---
SourceConfig {
    host: "localhost",
    port: 5432,
    name: "postgres",
    username: "postgres",
    password: Some(
        Secret([REDACTED alloc::string::String]),
    ),
}
