etl-api/src/db/snapshots/api__db__sources__tests__source_config_json_serialization.snap
---
source: api/src/db/sources.rs
expression: config
---
{
  "host": "localhost",
  "port": 5432,
  "name": "postgres",
  "username": "postgres",
  "password": "postgres"
}
